<resources>
    <string name="app_name">Ujikom</string>
    <string name="edit_image_profile">Edit Image</string>
    <string name="content_description">IMAGE</string>
    <string name="Username">Nama</string>
    <string name="Nim">Nim</string>
    <string name="Alamat">Alamat</string>
    <string name="TempatLahir">Tempat Lahir</string>
    <string name="TanggalLahir">Tanggal Lahir</string>
    <string name="Kelamin">Jenis Kelamin</string>
    <string name="Save">Save</string>
    <string name="gagal_save_message">Gagal Menyimpan Data</string>
    <string name="Divider">:</string>
    <string name="biodata">Biodata Mahasiswa</string>
    <string name="editBiodata">Edit Biodata</string>
    <string name="alpa">Alfa Rizqi || 2110511014</string>
</resources>