<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/img_placeholder"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/content_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_image_profile"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/secondary"
        app:layout_constraintTop_toBottomOf="@id/profileImage"
        app:layout_constraintStart_toStartOf="@id/profileImage"
        app:layout_constraintEnd_toEndOf="@id/profileImage"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/editButton"
        app:layout_constraintStart_toStartOf="@id/editButton"
        app:layout_constraintEnd_toEndOf="@id/editButton">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="25"
            android:hint="@string/Username"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editNimLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/editNameLayout"
        app:layout_constraintStart_toStartOf="@id/editNameLayout"
        app:layout_constraintEnd_toEndOf="@id/editNameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNimText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="25"
            android:hint="@string/Nim"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editAlamatLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/editNimLayout"
        app:layout_constraintStart_toStartOf="@id/editNimLayout"
        app:layout_constraintEnd_toEndOf="@id/editNimLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editAlamatText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="100"
            android:hint="@string/Alamat"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTanggalLahirLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/editAlamatLayout"
        app:layout_constraintStart_toStartOf="@id/editAlamatLayout"
        app:layout_constraintEnd_toEndOf="@id/editAlamatLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTanggalLahirText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/TanggalLahir"
            android:focusable="false"
            android:inputType="date"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTempatLahirLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/editTanggalLahirLayout"
        app:layout_constraintStart_toStartOf="@id/editTanggalLahirLayout"
        app:layout_constraintEnd_toEndOf="@id/editTanggalLahirLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTempatLahirText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="25"
            android:hint="@string/TempatLahir"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editKelaminLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/editTempatLahirLayout"
        app:layout_constraintStart_toStartOf="@id/editTempatLahirLayout"
        app:layout_constraintEnd_toEndOf="@id/editTempatLahirLayout">

        <AutoCompleteTextView
            android:id="@+id/editKelaminText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Kelamin"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Save"
        android:backgroundTint="@color/secondary"
        app:layout_constraintTop_toBottomOf="@id/editKelaminLayout"
        app:layout_constraintStart_toStartOf="@id/editKelaminLayout"
        app:layout_constraintEnd_toEndOf="@id/editKelaminLayout"/>


</androidx.constraintlayout.widget.ConstraintLayout>